--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e61bbbca85.js" crossorigin="anonymous"></script>
 
-    <title>Metal Cover Viewer With Deezer API</title>
+    <title>Cover Viewer With Deezer API</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
